objects/Dynamic_Field_Id_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Asset_Contract__c</fullName>
        <label>Asset.Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_ProductWarrantyStartDate__c</fullName>
        <label>Asset.ProductWarrantyStartDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Project__c</fullName>
        <label>Asset.Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_ServiceVisitCase__c</fullName>
        <label>Asset.ServiceVisitCase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Branch__c</fullName>
        <label>Case.Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_ContractType__c</fullName>
        <label>Case.ContractType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Project__c</fullName>
        <label>Case.Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_ServiceContractCase__c</fullName>
        <label>Case.ServiceContractCase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_Req_Group_Project_Field_Id__c</fullName>
        <label>Con Req Group Project Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_Req_Group_Project_PM_Field_Id__c</fullName>
        <label>Con Req Group Project PM Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_Req_Group_Sales_Order_Field_Id__c</fullName>
        <label>Con Req Group Sales Order Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_Req_Group_Service_Visit_Field_Id__c</fullName>
        <label>Con Req Group Service Visit Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DailySiteReport_Project__c</fullName>
        <label>DailySiteReport.Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Inventory_Movement_GL2_Field_Id__c</fullName>
        <label>Inbound Inventory Movement GL2 Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Inventory_Movement_GL3_Field_Id__c</fullName>
        <label>Inbound Inventory Movement GL3 Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_inventory_movement_Branch_Id__c</fullName>
        <label>Inbound inventory movement branch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_inventory_movement_GL_ID__c</fullName>
        <label>Inbound inventory movement GL ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_inventory_movement_Project_ID__c</fullName>
        <label>Inbound inventory movement Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Tracker_Ent__c</fullName>
        <label>Issue Tracker Ent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Tracker_Project_Field_Id__c</fullName>
        <label>Issue Tracker Project Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_City_Field_Id__c</fullName>
        <label>Opp City Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Proj_Loc_Desc_Field_Id__c</fullName>
        <label>Opp Proj/Loc Desc Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Inventory_Movement_GL2_Field_Id__c</fullName>
        <label>Outbound Inventory Movement GL2 Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Inventory_Movement_GL3_Field_Id__c</fullName>
        <label>Outbound Inventory Movement GL3 Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_inventory_movement_branch_Id__c</fullName>
        <label>Outbound inventory movement branch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SV_Account__c</fullName>
        <label>SV.Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SV_Asset__c</fullName>
        <label>SV.Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SV_Case__c</fullName>
        <label>SV.Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SV_ContractType__c</fullName>
        <label>SV.ContractType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SV_Contract__c</fullName>
        <label>SV.Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SV_Project__c</fullName>
        <label>SV.Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Account_Field_Id__c</fullName>
        <label>Sales Order Account Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line_Ent__c</fullName>
        <label>Sales Order Line Ent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line_Product_Field_Id__c</fullName>
        <label>Sales Order Line Product Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line_Project_Field_Id__c</fullName>
        <label>Sales Order Line Project Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line_Sales_Order_Field_Id__c</fullName>
        <label>Sales Order Line Sales Order Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line_Service_Visit_Field_Id__c</fullName>
        <label>Sales Order Line Service Visit Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Opportunity_Field_Id__c</fullName>
        <label>Sales Order Opportunity Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Project_Field_Id__c</fullName>
        <label>Sales Order Project Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outbound_inventory_movement_GL_ID__c</fullName>
        <label>outbound inventory movement GL ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outbound_inventory_movement_Project_Id__c</fullName>
        <label>outbound inventory movement Project Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dynamic Field Id Setting</label>
</CustomObject>